Fix input element misalignment (Closes: #483)
The English language version of the plugin had some issues with the alignment of the input elements. The problem was the words "From" and "To" being different length. Giving the labels a width fixed the issue.

--- a/style/database.css
+++ b/style/database.css
@@ -32,6 +32,20 @@ span.dashicons-external {
   padding-left: 3px;
 }
 
+label.to_label {
+  display: block;
+  width: 10%;
+  margin-top: 5px;
+  float: left
+}
+
+label.from_label {
+  display: block;
+  width: 10%;
+  margin-top: 5px;
+  float: left
+}
+
 @media only screen and (max-width: 1115px) {
   .label_buttons {
     display: block;
